css/styles.css
@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
@import url('https://fonts.googleapis.com/css?family=Lato:300,400&display=swap');

body {
    background: #adc5b5;
    background: -webkkit-linear- gradient(to right, #d8ddd2, #ccbfea);
    background: linear-gradient(to right, #e7c8e8, #dddccc);
    font-family: 'Lato';
}

h1 {
    letter-spacing: 5px;
    text-align: center;
}

.navbar {
    background: var(--primary-color);
    border-bottom: 1px solid white;
}

#myInput {
    float: right;
    margin: 0rem 1rem;
    border: none;
    border-radius: 5px;
}

input[type=text] {
    padding: 0.2rem;
}

.modal-content {
    background: transparent;
    color: white;
}

.btn,
.btn-primary {
    min-width: 90%;
    padding: 20px 5px;
    margin: 0.5rem;
    background: #ffc600;
    background: linear-gradient(to right, #D4D3DD, #d9a800);
    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
    text-transform: capitalize;
    border-radius: 5px;
    border: 1px white solid;
    transition: 0.5s linear;
}

.pokemon-list {
    list-style: none;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    align-items: space-between;
    justify-content: center;
    margin: 0 auto;
    max-width: 1200px;
}

